# Marco-

./: .gitignore  CHANGELOG.md  LICENSE  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  live.yml
examples/: quickstart.py
sdk/: ARCHITECTURE.md  CONTEXT.md  CONVENTIONS.md  GLOSSARY.md  PRD.md  ROADMAP.md  claude.md
src/agent_breaker/: __init__.py  breaker.py  crew_adapter.py  evaluator.py  exceptions.py  pricing.py  reporting.py  state.py
src/crew_fusebox/: __init__.py  breaker.py  crew_adapter.py  evaluator.py  exceptions.py  pricing.py  reporting.py  state.py  trajectory.py  webhooks.py
test_venv/: pyvenv.cfg
test_venv/Scripts/: activate  activate.bat  dumppdf.py  jp.py  pdf2txt.py
tests/: conftest.py  test_behavioral_mock.py  test_breaker.py  test_breaker_api.py  test_compat_smoke.py  test_crew_adapter.py  test_evaluator.py  test_import.py  test_pricing.py  test_reporting.py  test_state.py  test_trajectory.py  test_webhooks.py
