[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-breaker"
version = "0.1.0"
description = "An economic circuit-breaker for CrewAI multi-agent systems. Stop your AI agents from bankrupting you."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "agent-breaker contributors" }]
keywords = ["crewai", "llm", "cost", "budget", "circuit-breaker", "agents", "litellm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "crewai>=1.14,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/agent-breaker/agent-breaker"
Documentation = "https://github.com/agent-breaker/agent-breaker#readme"
Issues = "https://github.com/agent-breaker/agent-breaker/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_breaker"]

[tool.hatch.build.targets.sdist]
include = ["src/agent_breaker", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
