[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crew-fusebox"
version = "0.1.0"
description = "An economic circuit-breaker for CrewAI multi-agent systems. Stop your AI agents from bankrupting you."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "crew-fusebox contributors" }]
keywords = ["crewai", "llm", "cost", "budget", "circuit-breaker", "agents", "litellm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "crewai>=1.14,<2",
    # LiteLLM powers the cost model (token_counter + cost_per_token). CrewAI >=1.14 made
    # litellm an optional extra, so we depend on it directly — without it the breaker would
    # silently track $0 and never enforce a budget.
    "litellm>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/Akashrana1001/crew-fusebox"
Documentation = "https://github.com/Akashrana1001/crew-fusebox#readme"
Issues = "https://github.com/Akashrana1001/crew-fusebox/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/crew_fusebox"]

[tool.hatch.build.targets.sdist]
include = ["src/crew_fusebox", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
